# typengine

./: .gitignore  CMakeLists.txt  LICENSE  MIGRATION.md  README.md
docs/lua-api/: typengine.lua
examples/hello-world/: CMakeLists.txt  main.cpp
examples/scripting/: CMakeLists.txt  main.cpp
examples/scripting/scripts/: hello.lua
include/Typengine/core/: Engine.h  Math.h  World.h
include/Typengine/input/: Input.h
include/Typengine/renderer/: Renderer.h
include/Typengine/scripting/: ScriptSystem.h
include/Typengine/ui/: UISystem.h
include/engine/: ECS.hpp  Engine.hpp  Input.hpp  IsoCamera.hpp  IsoTilemap.hpp  JobSystem.hpp  Math.hpp  Renderer.hpp  Script.hpp  Skill.hpp  SpatialGrid.hpp  Tilemap.hpp  Typengine.hpp  UI.hpp
src/: ECS.cpp  Engine.cpp  Input.cpp  IsoTilemap.cpp  JobSystem.cpp  Renderer.cpp  Script.cpp  Skill.cpp  UI.cpp
src/core/: Engine.cpp  World.cpp
src/input/: Input.cpp
src/renderer/: Renderer.cpp
src/scripting/: ScriptSystem.cpp
src/shaders/: shader.frag  shader.vert  vert.spv
src/ui/: UISystem.cpp
